# llm-zoomcamp

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-intro/: parse-faq.ipynb  parse-faq_ts.ipynb  rag-intro.ipynb
02-open-source/: huggingface-flan-t5.ipynb  huggingface-mistral-7b.ipynb  huggingface-phi3.ipynb  ollama.ipynb
03-vector-search/: demo_es.ipynb
03-vector-search/eval/: evaluate-text.ipynb  evaluate-vector.ipynb  ground-truth-data.csv  ground-truth-data.ipynb
04-monitoring/: offline-rag-evaluation.ipynb
04-monitoring/data/: evaluations-aqa.csv  evaluations-qa.csv  results-gpt35-cosine.csv  results-gpt35.csv  results-gpt4o-cosine.csv  results-gpt4o-mini-cosine.csv  results-gpt4o-mini.csv
