[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = ""
authors = ["SAB-06"]
readme = "README.md"
packages = [{include = "llm_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.14.0"
ipywidgets = "^8.1.3"
notebook = "^7.2.1"
openai = "^1.37.0"
pandas = "^2.2.2"
python-docx = "^1.1.2"
scikit-learn = "^1.5.1"
transformers = "^4.43.2"
accelerate = "^0.33.0"
bitsandbytes = "^0.43.2"
requests = "^2.32.3"
sentencepiece = "^0.2.0"
sentence-transformers = "^3.0.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
